[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Sunbelt_API_Wrapper_for_Python_by_Jacob_Bayer"
version = "0.0.1"
authors = [
  { name="Jacob Bayer", email="jacobbenjaminbayer@gmail.com" },
]
description = "A client used for interacting with the Sunbelt API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"