[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sawp"
version = "0.0.1"
authors = [
  { name="Jacob Bayer", email="jacobbenjaminbayer@gmail.com" },
]
description = "A client used for interacting with the Sunbelt API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jacob-bayer/SAWP"
"Bug Tracker" = "https://github.com/jacob-bayer/SAWP/issues"